--- a/deedy_resume-openfont.tex
+++ b/deedy_resume-openfont.tex
@@ -66,7 +66,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Luyanda}{Mncube}{ \urlstyle{same}\href{https://luyandamncube.github.io/}{luyandamncube.github.io}| \href{github.com/luyandamncube}\\
-\href{mailto:luyanda.mncube@britehouse.co.za}{luyanda.mncube@britehouse.co.za} | 061 116 7195 
+\href{mailto:luyanda.mncube@dimensiondata.com}{luyanda.mncube@dimensiondata.com} | 061 116 7195 
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -147,20 +147,21 @@ Certified Foundation TEFL
 
 \section{Programming}
 % \subsection{Programming}
+\location{Big Data/Hadoop ecosystem:}
+\textbullet{} Apache NiFi \textbullet{} Jolt  \\
+
+\location{Databases:}
+MS Azure \textbullet{} CosmosDB \\
+
 \location{Languages:}
 C \textbullet{} C++ \textbullet{} C\# \textbullet{}  TSQL \\
 
 \location{Scripting:}
- Shell \textbullet{} Python \textbullet{} Javascript \\
+Python \textbullet{} Linux shell scripts \\
 
-\location{Databases:}
-MySQL \textbullet{} Microsoft SQL Server \textbullet{} CosmosDB \\
 
 \location{Technologies:}
-Ansible \textbullet{} Selenium \textbullet{} Webdriver \textbullet{} NiFi \textbullet{} Docker \\
-
-\location{Tools:}
-Jira \textbullet{} Git \textbullet{} Putty \textbullet{} Cygwin \textbullet{} \LaTeX\
+Ansible \textbullet{} Docker \\
 \sectionsep
 
 
@@ -182,13 +183,14 @@ Jira \textbullet{} Git \textbullet{} Putty \textbullet{} Cygwin \textbullet{} \L
 
 \section{Personal Summary}
 
-Inquisitive, hard-working and creative at heart. People come first in my life and I am not afraid of a challenge or shouldering responsibility. I love to learn and find myself sharing everything I learn about technology with the people around me. 
+I am a Professional Software Engineer with 2 years of industry experience including around 1 years of experience in Big Data technologies. Expertise in NiFi development experience, automation tools and E2E life cycle of software design
+process. Outstanding communication skills, dedicated to maintain up-to-date IT skills and industry knowledge.
 \sectionsep
 
-I currently work as a Data Engineer at Britehouse and have previously worked as an intern in their Graduate Program for 2019. At the moment, I am currently interested in data and automation, having spent a lot of my personal time doing projects in data preparation, regression models, RPA and infrastructure provisioning.
+I currently work as a Data Engineer at Dimension Data, as part of the Race Center Team. The team is
+responsible for delivering real-time analytics, data warehousing,  monitoring and support to NTT, the official technology partner of The Tour De France. 
 \sectionsep
-
-I studied Software engineering at Wethinkcode (a school based on  42: tuition-free computer programming school created and funded by French billionaire Xavier Niel and partners) and I am currently studying Computer Science \& Mathematics part-time. All my work and project can be viewed on my personal github.  
+I am a also student, completing my Bsc Computer Science \& Mathematics degree part-time with UNISA, with which I intend to complete in 2022. In addition, I attended, WeThinkCode, a school based on  42 (the tuition-free computer programming school created and funded by French billionaire Xavier Niel and partners). All my work and project can be viewed on my personal github.  
 \sectionsep
 
 
@@ -203,11 +205,10 @@ I studied Software engineering at Wethinkcode (a school based on  42: tuition-fr
 \location{Feb. 2020 - Present | Bryanston, JHB}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Race Center Team. The team is
-responsible for delivering Analytics, Database Development, Monitoring and Support to NTT, the official technology partner of The Tour De France.
-\item Developed maintainable, efficient features in SQL, Apache NiFi, and
-Python. 
-\item Provided live race-day support for data streams.
+\item Worked extensively within Apache NiFi ecosystem to capture real-time and near-real-time data streaming from various sources.
+\item Worked with different file formats like Json, AVRO, Jolt and compression techniques like gzip. 
+\item Developed maintainable, efficient batch/stream analytics features in SQL, Apache NiFi, and Python. 
+\item Provided live race-day support \& troubleshooting data streams for various live races including but not limited to UCI World Tour (Tour De France \& Paris–Roubaix) and UCI esports (Zwift)
 \end{tightemize}
 \sectionsep
 
@@ -216,43 +217,28 @@ Python.
 \location{Feb 2019 – Jan 2020 | Bryanston, JHB}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Full-year intensive program aimed at grooming industry-leading talent. 
-\item Tasked to develop the “2020 Graduate Program” as part our program mandate, shaping the future of the program and it's goals whilst focusing on learning \& development through project-based work.
-\item Worked as part of TeamGrind agile team to deliver the automated on-boarding solution for HR.
-\item Worked as part of 4IOTAnalytics agile team to deliver POC for client and an admin portal which allows clients to view their insights based on their data integration points.
+\item 1-year intensive program aimed at grooming industry-leading talent. This mandated us with developing the “2020 Graduate Program”, shaping the future of the program and it's goals whilst focusing on learning \& development through project-based work.
+\item Developed Britehouse Automeated Onboarding presentation layer using ReactJS. Validation using Formik
+\item Developed 4IOTAnalytics Retail Analytics POC for customer counting and footfall insights based on data integration points.
+\item Developed 4IOTAnalytics Retail Analytics admin portal presentation layer using Razor, HTML, CSS.
 \end{tightemize}
-\sectionsep
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Projects
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Projects} 
-\begin{tabular}{rll}
-Hitchhikers guide to C	     & A crash course PDF for C \& Algorithms\\
-DSLR    & Machine Learning by implementing a linear classification model\\
-libft & An open-source C library of standard functions
-
-
-\end{tabular}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Skills} 
-\begin{tabular}{rll}
-Data & Experience with ETL, data wrangling, data streaming \\
-Scripting  & Solid knowledge/experience with scripting technologies\\
-Automation & Experience with UiPath, webdriver (Selenium) \\
-Code Quality	  & healthy habits: coding conventions, documentation and testing\\
-Config Management	  & I have been exposed saltstack, ansible\\
+\section{Key Skills \& Compentencies} 
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Ingest data from real-time sources to NiFi and perform ETL operations on it.
+\item Improving data quality, reliability \& efficiency of the individual components \& the complete system.
+\item Knowledge of Software Engineering best practices with experience in implementing CI/CD, logging in production environments.
+\item Strong communication skills, including ability to convey analytics insights effectively to both IT and business audiences.
 
-\end{tabular}
+\end{tightemize}
 \sectionsep
+
 
 \end{minipage} 
 \end{document}  \documentclass[]{article}
