--- a/deedy_resume-openfont.tex
+++ b/deedy_resume-openfont.tex
@@ -183,14 +183,14 @@ Ansible \textbullet{} Docker \\
 
 \section{Personal Summary}
 
-I am a Professional Software Engineer with 2 years of industry experience including around 1 years of experience in Big Data technologies. Expertise in NiFi development experience, automation tools and E2E life cycle of software design
-process. Outstanding communication skills, dedicated to maintain up-to-date IT skills and industry knowledge.
+I am a Professional Software Engineer with 2 years of industry experience including around 1 years of experience in Big Data technologies. I have worked primarily with  Apache NiFi development, automation tools and E2E life cycle of software design process.
 \sectionsep
 
 I currently work as a Data Engineer at Dimension Data, as part of the Race Center Team. The team is
 responsible for delivering real-time analytics, data warehousing,  monitoring and support to NTT, the official technology partner of The Tour De France. 
+
 \sectionsep
-I am a also student, completing my Bsc Computer Science \& Mathematics degree part-time with UNISA, with which I intend to complete in 2022. In addition, I attended, WeThinkCode, a school based on  42 (the tuition-free computer programming school created and funded by French billionaire Xavier Niel and partners). All my work and project can be viewed on my personal github.  
+I am also a student, completing my Bsc Computer Science \& Mathematics degree part-time with UNISA, with which I intend to complete in 2022. In addition, I attended, WeThinkCode, a school based on  42 (the tuition-free computer programming school created and funded by French billionaire Xavier Niel and partners). All my work and project can be viewed on my personal github.  
 \sectionsep
 
 
