--- a/deedy_resume-openfont.tex
+++ b/deedy_resume-openfont.tex
@@ -89,13 +89,23 @@
 \sectionsep
 
 \subsection{Wethinkcode}
-\descript{Software Engineering}
 \location{2019 | Johannesburg CBD, JHB}
 \sectionsep
 
 \subsection{Northcliff High School}
 \location{2011|  Northcliff, JHB}
 \location{4 Distinctions, 9 subjects}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     CERTIFICATION
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Certification}
+% \subsection{Undergraduate}
+MCSA: Database Development \\
+Certified SAFe \textregistered Agilist \\
+Certified Foundation TEFL
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -129,16 +139,7 @@ Functional Programming \\
 Predictive Analysis \\
 Regression Modelling \\
 % {\footnotesize \textit{\textbf{(Research Asst. \& Teaching Asst 2x) }}} \\s
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     CERTIFICATION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Certification}
-% \subsection{Undergraduate}
-MCSA: Database Development \\
-Certified SAFe \textregistered Agilist \\
-Certified Foundation TEFL
+\sectionsep
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -183,14 +184,10 @@ Ansible \textbullet{} Docker \\
 
 \section{Personal Summary}
 
-I am a Professional Software Engineer with 2 years of industry experience including around 1 years of experience in Big Data technologies. I have worked primarily with  Apache NiFi development, automation tools and E2E life cycle of software design process.
-\sectionsep
+I am a Professional Software Engineer with 2 years of industry experience including around 1 years of experience in Big Data technologies. I currently work as a Data Engineer at Dimension Data, as part of the Race Center Team. The team is responsible for delivering real-time analytics, data warehousing,  monitoring and support to NTT, the official technology partner of The Tour De France.
 
-I currently work as a Data Engineer at Dimension Data, as part of the Race Center Team. The team is
-responsible for delivering real-time analytics, data warehousing,  monitoring and support to NTT, the official technology partner of The Tour De France. 
-
-\sectionsep
-I am also a student, completing my Bsc Computer Science \& Mathematics degree part-time with UNISA, with which I intend to complete in 2022. In addition, I attended, WeThinkCode, a school based on  42 (the tuition-free computer programming school created and funded by French billionaire Xavier Niel and partners). All my work and project can be viewed on my personal github.  
+ \sectionsep
+I am also a student, completing my Bsc Computer Science \& Mathematics degree part-time with UNISA, with which I intend to complete in 2022. In addition, I attended WeThinkCode: a school based on \textbf{École 42} (the non-profit computer programming school based in Paris). All my work and project can be viewed on my personal github.  
 \sectionsep
 
 
